--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "password-reset",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node script.js",
-    "dev": "nodemon script.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "Marcus Mathuram",
